#9788, #9510 code review modification.